@@ -2,6 +2,7 @@ From version 0.4.4 to 0.4.5
 - change in call handling for ringing.
 - remote call connection stats counted as incoming for near leg.
 - inviteRemote can pre-stuff authentication header on redirection.
+- invite handling to assure interface address gets set if non-domain call.
 
 From version 0.4.3 to 0.4.4
 - logging of state change, period and reload requests.
